minimally working pages

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,11 @@
     "stop_production": "npx forever stop reactServer.cjs",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-    
   },
   "dependencies": {
     "express": "^5.1.0",
     "forever": "^4.0.3",
+    "node": "^22.21.0",
     "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
